--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "webpack",
     "lint": "eslint ./src"
   },
-  "keywords": ["easing", "easings", "animation"],
+  "keywords": [
+    "easing",
+    "easings",
+    "animation"
+  ],
   "author": "Thomas J. Otterson <barandis1729@gmail.com>",
   "license": "MIT",
   "devDependencies": {
@@ -21,7 +25,7 @@
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "eslint": "^6.1.0",
-    "husky": "^3.0.3",
+    "husky": "^3.0.4",
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
     "webpack": "^4.39.1",
